--- a/Core/main.html
+++ b/Core/main.html
@@ -20,8 +20,8 @@
 	<link rel="stylesheet" href="/assets/as-pie-progress/css/progress.min.css">
 	<link rel="stylesheet" href="/assets/theme/css/style_progress.css">
 	<link rel="stylesheet" href="/assets/mobirise/css/mbr-additional.css" type="text/css"> 
-	<link rel="stylesheet" href="assets/mobirise/css/mbr_progress.css" type="text/css"> 
-	<link rel="stylesheet" href="assets/mobirise/css/mbr-timeline.css" type="text/css">
+	<link rel="stylesheet" href="/assets/mobirise/css/mbr_progress.css" type="text/css"> 
+	<link rel="stylesheet" href="/assets/mobirise/css/mbr-timeline.css" type="text/css">
 </head>
 <script src="/assets/VueJS/vue.js"></script>
 <!-- <script src="/assets/angular/angular.min.js"></script> -->
@@ -41,7 +41,7 @@
 				<!-- <h1 class="mbr-text testimonial-text mbr-fonts-style display-7"><span style="font-style: normal;">Specialise in Back-End Development</span></h1> -->
             </div>
 			<div class="mbr-figure pl-lg-5" style="width: 130%;">
-              <img src="assets/images/IB.jpg" alt="" title="" media-simple="true">
+              <img src="/assets/images/IB.jpg" alt="" title="" media-simple="true">
             </div>
         </div>
     </div>
