--- a/Core/main.html
+++ b/Core/main.html
@@ -206,7 +206,7 @@
                         Web Developer
                     </h4>
                     <p class="mbr-timeline-text mbr-fonts-style display-7">
-                        Working in Credencen Analytics India Private Limited as Software Developer.
+                        Working in Credence Analytics India Private Limited as Software Developer.
                     </p>
                  </div>
             </div>
